--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.pellaton.estol</groupId>
   <artifactId>estol</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <name>ESTOL application framework</name>
   <description>Easily build and run Spring Framwork based Java SE applications with ESTOL</description>
   <url>https://github.com/pellaton/estol</url>
@@ -20,10 +21,10 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:git@github.com:pellaton/estol.git</connection>
-    <developerConnection>scm:git:git@github.com:pellaton/estol.git</developerConnection>
+    <connection>scm:git:https://github.com/pellaton/estol.git</connection>
+    <developerConnection>scm:git:https://github.com/pellaton/estol.git</developerConnection>
     <url>${project.url}</url>
-    <tag>estol-1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
