--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>estol</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <name>ESTOL application framework</name>
   <description>Easily build and run Spring Framwork based Java SE applications with ESTOL</description>
   <url>https://github.com/pellaton/estol</url>
@@ -23,7 +23,7 @@
     <connection>scm:git:https://github.com/pellaton/estol.git</connection>
     <developerConnection>scm:git:https://github.com/pellaton/estol.git</developerConnection>
     <url>${project.url}</url>
-    <tag>estol-1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
